add cover and marketplace
